--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,4 +10,8 @@
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>/faces/*</url-pattern>
   </servlet-mapping>
+  <mime-mapping>
+    <extension>xhtml</extension>
+	<mime-type>application/xml</mime-type>
+  </mime-mapping>
 </web-app>
