--- a/pom.xml
+++ b/pom.xml
@@ -6,15 +6,15 @@
   <packaging>war</packaging>
   <dependencies>
 	<dependency>
-	  <groupId>com.google.firebase</groupId>
-	  <artifactId>firebase-admin</artifactId>
-	  <version>9.2.0</version>
-	</dependency>
-	<dependency>
       <groupId>javax.faces</groupId>
       <artifactId>javax.faces-api</artifactId>
       <version>2.2</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mongodb</groupId>
+      <artifactId>mongodb-driver-sync</artifactId>
+      <version>4.11.1</version>
     </dependency>
   </dependencies>
   <build>
