--- a/pom.xml
+++ b/pom.xml
@@ -6,16 +6,25 @@
   <packaging>war</packaging>
   <dependencies>
 	<dependency>
-      <groupId>javax.faces</groupId>
-      <artifactId>javax.faces-api</artifactId>
-      <version>2.2</version>
-      <scope>provided</scope>
-    </dependency>
+	  	<groupId>org.apache.myfaces.core</groupId>
+	  	<artifactId>myfaces-api</artifactId>
+	  	<version>2.2.15</version>
+	</dependency>
+	<dependency>
+  		<groupId>org.apache.myfaces.core</groupId>
+  		<artifactId>myfaces-impl</artifactId>
+  		<version>2.2.15</version>
+	</dependency>
     <dependency>
       <groupId>org.mongodb</groupId>
       <artifactId>mongodb-driver-sync</artifactId>
       <version>4.11.1</version>
     </dependency>
+    <dependency>
+	  <groupId>org.apache.commons</groupId>
+	  <artifactId>commons-collections4</artifactId>
+	  <version>4.4</version>
+	</dependency>
   </dependencies>
   <build>
     <plugins>
