--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,4 +14,8 @@
     <extension>xhtml</extension>
 	<mime-type>application/xml</mime-type>
   </mime-mapping>
+  <context-param>
+  	<param-name>javax.faces.WEBAPP_RESOURCES_DIRECTORY</param-name>
+  	<param-value>/WEB-INF/resources</param-value>
+  </context-param>
 </web-app>
